# robot-dream

./: .gitignore  LICENSE  README.md  robot-dream.cabal  stack.yaml
Nociception/: 020.ses  3tree.hoc  Ka.mod  Kv.mod  README.md  allcells.hoc  atp.ses  atp3.mod  atpDiff.hoc  balance.hoc  cat.mod  cfiber.py  line.hoc  line1.hoc  line2.hoc  linetemp.hoc  modelA.hoc  na.mod  np.ses  nrnnew2.hoc  onefibersimulation.py  out.spk  p2x2.ses  p2x2O  p2x3.mod  parallelsimulation.py  part.hoc  part1.hoc  plotting.py  recording.hoc  soma.hoc  treetemp.hoc  untitled.hoc  voltage.ses  what1.txt
Nociception/cfiber/: 222222  balance.hoc  cf.hoc  cfiber.py  (+4 more)
app/: Main.hs
appetite_control/: ReadME.md
danil/: readme.md
direct_translation/: ReadMe.md  Sensory cortex.draw.xml  Sensory_cortex.draw.xml
doc/: Final pathway.html  HLD_Activity_Reverse_translation  HLD_Activity_SemanticTagger  HLD_Activity_life_cycle  HLD_Component  HLD_Component_Robot  HLD_Component_SleepingBrain  HLD_Use_cases  HL_Emristor.xml  HL_memristive_brain_sleeping_brain.xml  Nociception.html  Somatosensory input.md  Synchr.rtf  architecture.md  direct_translation_format.md  emristor.xml  hld  hld_life_cycle  memristive_approach.md  model_of_six.owl  rNN to Logic Rules.md  review_somatosensory_cortex.md  robot_protocol_description.md
memristors/: calculations.nb  comparation analysis.md
output_model/: ReadMe.md
somatosensory_columns/: data.py  func.py  functions.py  globals.py  main.py  neuromodulation.py  parameters.py  property.py
src/: Commands.hs  Configuration.hs  Engine.hs  Rules.hs  System.hs
(+406 files in other folders)
