name:                robot-dream
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/research-team/robot-dream#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Tchitchigin
maintainer:          sad.ronin@gmail.com
copyright:           research-team
category:            Robotics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Commands
                     , Rules
  build-depends:       base >= 4.7 && < 5
                     , free
  default-language:    Haskell2010

executable robot-dream-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , robot-dream
  default-language:    Haskell2010

test-suite robot-dream-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , robot-dream
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/research-team/robot-dream
